minor styling fix when mouseout

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                             word.mouseout(function (d) {
                                 tooltip.empty()
                                 tooltip.css('opacity', '0%')
-                                $(this).css('background-color', 'inherit').css('color', 'inherit')
-                                $('#' + idx + '-' + f.HEAD).css('background-color', 'inherit').css('color', 'inherit')
+                                $(this).css('background-color', '').css('color', '')
+                                $('#' + idx + '-' + f.HEAD).css('background-color', '').css('color', '')
                             })
                             p.append(word)
                             p.append(' ')
